fix bad cart icon position on mobile view

--- a/src/components/Layout/UserControls/userControls.module.css
+++ b/src/components/Layout/UserControls/userControls.module.css
@@ -47,12 +47,12 @@
 }
 
 .userControlsContainer{
-    position: relative;
     display: flex;
     align-items: end;
     justify-content: center;
     padding-left: 0;
     padding-right: 0;
+    min-height:100% ;
 }
 
 .userControlPerson, .userControlCart{
